Beginning specs for user and integration (registration process)

--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -24,5 +24,5 @@
     -# %p= f.input :password_confirmation, :as => :password
 
   - f.buttons do
-    = f.commit_button "Sign Up"
+    = f.commit_button "Register"
 -#= render :partial => "shared/devise_links"
