--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -3,26 +3,27 @@
 #register
   - semantic_form_for resource_name, resource, :url => registration_path(resource_name),  :html => { :class => "main" } do |f|
     - f.inputs do
-      = f.input :gender, :as => :radio, :collection => [["Madame", false], ["Monsieur", true]], :selected => nil, :required => true
-      = f.input :first_name
-      = f.input :last_name
-      = f.input :faculty
-      = f.input :email
-      = f.input :phone
+      = f.input :gender, :as => :radio, :collection => [["Madame", "female"], ["Monsieur", "male"]], :required => true
+      = f.input :first_name, :required => true
+      = f.input :last_name, :required => true
+      = f.input :faculty, :required => true
+      = f.input :email, :required => true
+      = f.input :phone, :required => true
       = f.input :url, :label => "Url"
       = f.input :linkedin_url, :label => "LinkedIn url"
-      = f.input :thesis_supervisor
-      = f.input :thesis_subject, :as => :text
-      = f.input :supervisor_authorization, :as => :radio, :label => "Est-ce que vous avez l'accord de votre directeur de thèse pour participer à ce cours ?", :selected => nil
-      = f.input :doctoral_school_rules, :as => :radio, :label => "Etes-vous soumis aux règles de l'Ecole Doctorale et avez-vous besoin de crédits ?", :selected => nil
-      = f.input :thesis_invention, :as => :text, :label => "Est-ce que vous avez fait une invention dans le cadre de votre thèse ? Si oui pourriez-vous la décrire en 3 lignes:"
-      = f.input :motivation, :as => :text, :label => "Pourriez-vous nous décrire en 10 lignes qu'est-ce qui vous motive à participer à ce cours ?"
-      = f.input :agreement, :as => :check_boxes, :label => "Je suis disponible"
+      = f.input :thesis_supervisor, :required => true
+      = f.input :thesis_subject, :as => :text, :required => true
+      = f.input :supervisor_authorization, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Est-ce que vous avez l'accord de votre directeur de thèse pour participer à ce cours?", :required => true
+      = f.input :doctoral_school_rules, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Etes-vous soumis aux règles de l'Ecole Doctorale et avez-vous besoin de crédits?", :required => true
+      = f.input :thesis_invention, :as => :text, :label => "Est-ce que vous avez fait une invention dans le cadre de votre thèse? Si oui pourriez-vous la décrire en 3 lignes:"
+      = f.input :motivation, :as => :text, :label => "Pourriez-vous nous décrire en 10 lignes qu'est-ce qui vous motive à participer à ce cours?"
+      = f.input :agreement, :as => :boolean, :label => "Je suis disponible", :required => true
 
       -# %p= f.input :password, :as => :password
       -# 
       -# %p= f.input :password_confirmation, :as => :password
 
     - f.buttons do
-      = f.commit_button "Sign Up"
+      = f.commit_button "Register"
+    .required_mention= "<abbr title='required'>*</abbr> required"
   -#= render :partial => "shared/devise_links"
