--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,9 +1,9 @@
-%h2.headline= "mintt is a course part of the EPFL Doctoral School under the College of Management of Technology program."
+%h2.headline= "mintt is a course for EPFL PhD students organized by EPFL Technology Transfer Office."
 .text
+  %p= "It is part of the EPFL Doctoral School under the College of Management of Technology program."
   %h4= "Objectives"
-  %p= "In a nutshell, mintt's purpose is to provide EPFL PhD students with a accelerated training in Invention management, assessment of its potential, elaboration of intellectual property rights, license negotiation, evaluation of the start-up option and experience sharing from the fields of academic results industrialization and sales."
+  %p= "In a nutshell, mintt's purpose is to provide EPFL PhD students with an accelerated training in Invention management, potential assessment, intellectual property rights elaboration, license negotiation, start-up option evaluation and experience sharing in the fields of academic results industrialization and sales."
   %h4="Content"
-  %p= "mintt is based on real-world EPFL invention cases and is teached by experienced and active professionals in the field of technology transfer field working at the Tech Transfer Office of EPFL (SRI)."
-  %p= "It is first-hand information given to probably the most receptive and precisely targeted audience of talented young PhD scientists."
+  %p= "mintt is based on real-world EPFL invention cases and is teached by experienced and active professionals in the field of technology transfer working at the Tech Transfer Office of EPFL (SRI)."
   %h4= "Format"
-  %p= "It is mintt's goal to be very dense, hence the reason why the course starts with two full days of teaching with approximately a dozen of teachers in early June followed by a personal work to be conducted in a tandem of students in the form an EPFL invention case study to be presented and discussed with the rest of the class in October."
+  %p= "One of the goal of the course is to be very dense. Therefore the course starts in early June with two full days of teaching with approximately a dozen of teachers. It is then followed by a personal work to be conducted in a tandem of students in the form an EPFL invention case study to be presented and discussed with the rest of the class in October."
