--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -6,20 +6,6 @@
 %ul#modules
   - module_box do
     .left
-      = image_tag "/images/photos/default.png", :alt => "External Speaker"
-      %h4
-        = "External speaker"
-        %em= "to be announced"
-      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-        %span= "Biography"
-    .right
-      %h3
-        %strong= "Module 1"
-        = "Real world feedback from an ex-EPFL PhD"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-  - module_box do
-    .left
       = image_tag "/images/photos/gabriel_clerc.jpg", :alt => "Gabriel Clerc"
       %h4
         = "Gabriel Clerc"
@@ -34,9 +20,23 @@
         %span= "Biography"
     .right
       %h3
-        %strong= "Module 2"
+        %strong= "Module 1"
         = "About inventions and inventors"
       .desc= "This module is focusing on the very beginning of the innovation chain : the invention in a scientific research environment. It will address many questions in this field such as what is an invention? What are the various types of inventions? What is the difference between an invention and a discovery? Who is an inventor, what are his/her main qualities, duties and rights and which benefits he/she might have? Publish and protect, is it compatible? How to at EPFL? etc. The participants will be exposed to real cases and meet also an invited speaker who will talk about his/her experiences as scientist/inventor who participated actively to an innovation adventure."
+
+  - module_box do
+    .left
+      = image_tag "/images/photos/default.png", :alt => "External Speaker"
+      %h4
+        = "External speaker"
+        %em= "to be announced"
+      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
+        %span= "Biography"
+    .right
+      %h3
+        %strong= "Module 2"
+        = "Real world feedback from an ex-EPFL PhD"
+      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
   - module_box do
     .left
@@ -92,7 +92,7 @@
       %h3
         %strong= "Module 6"
         = "Licensing"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      .desc= 'Transferring new technologies and bright inventions to industry is an important mission of the university. As an inventor, having contributed to such technologies and inventions is a great achievement, but, in order to bring them to the market, licensing to industry is a "must" - and it is an absolute reward for the inventors to help making it happen.<br /> This module focuses on licensing, the most common way to transfer technologies. It is a very interactive module combining case studies and examples to illustrate the essential components of the license agreement. It also aims to provide a basis for licensing negotiations.'
     
   - module_box do
     .left
@@ -120,7 +120,7 @@
       %h3
         %strong= "Module 8"
         = "Start-up"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      .desc= "  Create a start-up? In some cases it's going to be the only way for its founders to bring an innovation to the market while everybody else has yet to understand its potential.<br /> But before moving forward and create one, it is useful for the aspiring entrepreneur to understand what it takes to do a start-up and what kind of mindset she or he must develop to be up to this demanding and sometimes very rewarding task."
 
   - module_box do
     .left
