Adding liquid for the mail templates

--- a/app/views/devise_mailer/confirmation_instructions.html.haml
+++ b/app/views/devise_mailer/confirmation_instructions.html.haml
@@ -1,5 +1,7 @@
-== Welcome #{@resource.email}!
+= Liquid::Template.parse(MailTemplate.find_by_title('new_message').content).render('user' => @resource)
 
-You can confirm your account through the link below:
-
-= link_to 'Confirm my account', user_confirmation_url(:confirmation_token => @resource.confirmation_token)
+/ == Welcome #{@resource.email}!
+/ 
+/ You can confirm your account through the link below:
+/ 
+/ = link_to 'Confirm my account', user_confirmation_url(:confirmation_token => @resource.confirmation_token)
