Adding a check in controllers to prevent models to be instanciated with non-registered keys + specs MailTemplate title should be unique Adding users generation in seeds.rb Controllers specs

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -10,7 +10,7 @@
       %th{:colspan => 2} Actions
     %tr
       %th Gender
-      %th Name (email)
+      %th= link_to "Name (email)", admin_users_path(:order_by => 'name')
       %th Faculty
       %th Phone
       %th Url
