Adding seeds for messages in seeds.rb Adding sorting for messages & users Adding a Model class, all the models can inherits from it (give convenients methods, like order_by) Making all the User keys accessible from Liquid template : liquid_methods *User.keys.keys Adding will_paginate in the required gems

--- a/app/views/admin/mail_templates/show.html.haml
+++ b/app/views/admin/mail_templates/show.html.haml
@@ -3,4 +3,8 @@
 .text
   %h3= "Mail template"
   
-  = text_area_tag('content', Liquid::Template.parse(@mail_template.content).render('user' => User.first), :rows => 10, :cols => 25)
+  %hr
+  = Liquid::Template.parse(@mail_template.content).render('user' => User.first).gsub!(/\n/, '<br />')
+  %hr
+  
+  = link_to("edit", edit_admin_mail_template_path(@mail_template))
