--- a/app/views/pages/modules.html.haml
+++ b/app/views/pages/modules.html.haml
@@ -50,7 +50,7 @@
       %h3
         %strong= "Module 3"
         = "Evaluate the Potential"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      .desc= "The commercial potential of an invention, will show that no technology has any value by itself. It is as important to consider its applications. Through 2 case studies, the module will aim at sensitize the audience about the gaps that may exist between an invention and its possible product application. A “check-list” listing the evaluation criteria and related questions that an inventor should ask himself for this evaluation will be built by the participants and a synthesis will be provided at the end of the module."
 
   - module_box do
     .left
@@ -126,14 +126,13 @@
     .left
       = image_tag "/images/photos/default.png", :alt => "External Speaker"
       %h4
-        = "External speaker"
-        %em= "to be announced"
-      - link_to "", :class => "bio", :onclick => "window.open(this); return false" do
-        %span= "Biography"
+        = "Philippe Eyries"
+      -#  %em= "to be announced"
+      -#- link_to "", :class => "bio", :onclick => "window.open(this); return false" do
+      -#  %span= "Biography"
     .right
       %h3
         %strong= "Module 9"
-        = "Sales in practice"
-      .desc= "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+        = "From innovation to sales. A long way?"
+      .desc= "He will explain and prove that you will enjoy selling. If you like to sell (you will like selling if you like people). If you can explain clearly  (i) the existing (pain (ii) the solution and (iii) the value proposition). If you choose the right direction (selected target) the right person (early adopters). If you accept help from network (partners)."
     
