--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -3,45 +3,25 @@
   %h3= "Users"
   
   %table
+    %colgroup
+      - 16.times do
+        %col{ :class => cycle("even", "odd") }
     %tr
-      %th{:colspan => 6} General informations
-      %th{:colspan => 6} Thesis
-      %th{:colspan => 2} Misc
-      %th{:colspan => 2} Actions
-    %tr
-      %th Gender
-      %th= link_to "Name (email)", admin_users_path(sort_parameters('first_name'))
+      %th
+      %th= link_to "Name", admin_users_path(sort_parameters('first_name'))
       %th= link_to "Faculty", admin_users_path(sort_parameters('faculty'))
       %th= link_to "Phone", admin_users_path(sort_parameters('phone'))
-      %th Url
-      %th LinkedIn url
       %th= link_to "Supervisor", admin_users_path(sort_parameters('thesis_supervisor'))
-      %th Subject
-      %th= link_to "Reg. date", admin_users_path(sort_parameters('thesis_registration_date'))
-      %th= link_to "Adm. date", admin_users_path(sort_parameters('thesis_admission_date'))
-      %th Invention
-      %th= link_to "Auth?", admin_users_path(sort_parameters('supervisor_authorization'))
-      %th= link_to "Credits?", admin_users_path(sort_parameters('doctoral_school_rules'))
-      %th Motivation
-      %th Edit
-      %th Delete
+      %th
+      %th
       
     - @users.each do |user|
-      %tr[user]
+      %tr[user]{ :class => cycle("", "alt") }
         %td= user_gender(user)
-        %td= user_full_name_with_email(user)
+        %td= link_to user_full_name(user), admin_user_path(user)
         %td= user.faculty
         %td= user.phone
-        %td= user_url(user)
-        %td= user_linkedin_url(user)
         %td= user.thesis_supervisor
-        %td= link_to(words_count(user.thesis_subject), admin_user_path(user))
-        %td= user.thesis_registration_date
-        %td= user.thesis_admission_date
-        %td= link_to(words_count(user.thesis_invention), admin_user_path(user))
-        %td= user.supervisor_authorization
-        %td= user.doctoral_school_rules
-        %td= link_to(words_count(user.motivation), admin_user_path(user))
         %td= link_to("edit", edit_admin_user_path(user))
         %td= button_to("delete", admin_user_path(user), :confirm => "Are you sure?", :method => :delete)
         
