--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -172,20 +172,20 @@ a#registration_button span {display:none;}
 
 #sidebar ul.entities {
   margin:5px 0 0;
-  background:#111;
+/*  background:#111;
   border: 1px solid #000;
   -webkit-border-radius:8px;
   -moz-border-radius:8px;
-}
+*/}
 
 #sidebar ul.entities li {
   padding:0;
   background:none;
   display:block;
   font-size:15px;
-  border-top:1px solid #222;
+/*  border-top:1px solid #222;
   border-bottom:1px solid #000;
-}
+*/}
 
 #sidebar ul.entities li.first {
   line-height:0;
@@ -198,7 +198,7 @@ a#registration_button span {display:none;}
 
 #sidebar ul.entities li a {
   display:block;
-  padding:10px 0 8px 10px;
+  padding:10px 0 8px;
   color:#fff;
   font-weight:500;
 }
