Adding user edit

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -21,7 +21,7 @@
           - link_to root_path do
             %span= "mintt"
         %h2= "Management of Innovation and Technology Transfer"
-        - link_to admin_url, :id => "admin_label" do
+        - link_to admin_users_path, :id => "admin_label" do
           %span= "Admin"
         %ul#menu
           %li.home
