--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -30,7 +30,7 @@
           %li{ :class => ('active' if controller_name == 'users') }= link_to "Users", admin_users_path
           %li{ :class => ('active' if controller_name == 'messages') }= link_to "Messages", admin_messages_path
           %li{ :class => ('active' if controller_name == 'mail_templates') }= link_to "Mail templates", admin_mail_templates_path
-      #content.admin
+      #content.admin{ :class => "#{controller_name} #{action_name}" }
         = yield
       #sidebar
         = yield :sidebar
