--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -14,7 +14,7 @@
       
     - @messages.each do |message|
       %tr[message]
-        %td= time_ago_in_words(message.created_at)
+        %td= sexy_date(message.created_at)
         %td= message.read
         %td= message.replied
         %td= message_sender_name_with_email(message)
